Completed basic structure of form

--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="left">
+            <div class="logo">
+                <img src="" alt="">
+                <span>DREAMS</span>
+            </div>
+        </div>
+        <div class="right">
+            <div class="top">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil non harum corporis veritatis, omnis
+                    voluptates atque perspiciatis labore optio! Exercitationem!
+                </p>
+            </div>
+            <div class="main">
+                <form action="">
+                    <h2>Let's do this!</h2>
+
+                    <div class="inputs">
+
+                        <div class="box">
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name" name="userName">
+                        </div>
+                        <div class="box">
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" name="lastName" id="last-name">
+                        </div>
+                        <div class="box">
+                            <label for="email">EMAIL</label>
+                            <input type="email" name="email" id="email">
+                        </div>
+                        <div class="box">
+                            <label for="phoneNumber">PHONE NUMBER</label>
+                            <input type="tel" name="phoneNumber" id="phoneNumber">
+                        </div>
+                        <div class="box">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" name="password" id="password">
+                        </div>
+                        <div class="box">
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <input type="password" name="confirm-password" id="confirm-password">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="create">
+                <button type="submit">Create Account</button>
+                <p>Already have an account? <a href=""> Log in </a></p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
