--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up Form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +15,8 @@
     <div class="container">
         <div class="left">
             <div class="logo">
-                <img src="" alt="">
+                <i class="fi fi-ts-thought-bubble"></i>
+                <img src="thought-bubble.png" alt="" id="thought">
                 <span>DREAMS</span>
             </div>
         </div>
